--- a/styles/style.css
+++ b/styles/style.css
@@ -111,3 +111,25 @@
     left: 0;
     right: -55.8px;
 }
+
+#cover {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+#cover::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #EBEBEB;
+    z-index: 1;
+}
+
+#cover .container {
+    position: relative;
+    z-index: 2;
+}
